apps/prod-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prod-app
spec:
  selector:
    app: prod-app
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
